fixed a bug with publishing new stories, and fixed visibility concerns across the site. i'm blue da ba dee da ba dai.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,11 +86,11 @@ label {
 	position:relative;
 }
 a {
-	color:#669900;
-	font-weight:300;
+	color:#0099CC;
+	font-weight:400;
 }
 a:hover {
-	color:#558800;
+	color:#24ADDE;
 	text-decoration:none;
 }
 
@@ -105,13 +105,13 @@ header {
 	font-size:20px;
 	font-family:'Lato';
 	
-background: -moz-linear-gradient(top,  rgba(153,204,0,0.97) 0%, rgba(187,224,68,0.97) 68%, rgba(187,224,68,0.97) 96%, rgba(166,206,51,0.97) 97%, rgba(102,153,0,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(153,204,0,0.97)), color-stop(68%,rgba(187,224,68,0.97)), color-stop(96%,rgba(187,224,68,0.97)), color-stop(97%,rgba(166,206,51,0.97)), color-stop(100%,rgba(102,153,0,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(153,204,0,0.97) 0%,rgba(187,224,68,0.97) 68%,rgba(187,224,68,0.97) 96%,rgba(166,206,51,0.97) 97%,rgba(102,153,0,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(153,204,0,0.97) 0%,rgba(187,224,68,0.97) 68%,rgba(187,224,68,0.97) 96%,rgba(166,206,51,0.97) 97%,rgba(102,153,0,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(153,204,0,0.97) 0%,rgba(187,224,68,0.97) 68%,rgba(187,224,68,0.97) 96%,rgba(166,206,51,0.97) 97%,rgba(102,153,0,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(153,204,0,0.97) 0%,rgba(187,224,68,0.97) 68%,rgba(187,224,68,0.97) 96%,rgba(166,206,51,0.97) 97%,rgba(102,153,0,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f799cc00', endColorstr='#669900',GradientType=0 ); /* IE6-9 */
+background: -moz-linear-gradient(top,  rgba(51,181,229,0.97) 0%, rgba(51,181,229,0.97) 1%, rgba(80,192,233,0.98) 20%, rgba(103,199,234,0.99) 64%, rgba(80,192,233,1) 89%, rgba(51,181,229,1) 97%, rgba(0,153,204,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(51,181,229,0.97)), color-stop(1%,rgba(51,181,229,0.97)), color-stop(20%,rgba(80,192,233,0.98)), color-stop(64%,rgba(103,199,234,0.99)), color-stop(89%,rgba(80,192,233,1)), color-stop(97%,rgba(51,181,229,1)), color-stop(100%,rgba(0,153,204,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(51,181,229,0.97) 0%,rgba(51,181,229,0.97) 1%,rgba(80,192,233,0.98) 20%,rgba(103,199,234,0.99) 64%,rgba(80,192,233,1) 89%,rgba(51,181,229,1) 97%,rgba(0,153,204,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(51,181,229,0.97) 0%,rgba(51,181,229,0.97) 1%,rgba(80,192,233,0.98) 20%,rgba(103,199,234,0.99) 64%,rgba(80,192,233,1) 89%,rgba(51,181,229,1) 97%,rgba(0,153,204,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(51,181,229,0.97) 0%,rgba(51,181,229,0.97) 1%,rgba(80,192,233,0.98) 20%,rgba(103,199,234,0.99) 64%,rgba(80,192,233,1) 89%,rgba(51,181,229,1) 97%,rgba(0,153,204,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(51,181,229,0.97) 0%,rgba(51,181,229,0.97) 1%,rgba(80,192,233,0.98) 20%,rgba(103,199,234,0.99) 64%,rgba(80,192,233,1) 89%,rgba(51,181,229,1) 97%,rgba(0,153,204,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f733b5e5', endColorstr='#0099cc',GradientType=0 ); /* IE6-9 */
 	
 }
 .fancybox-margin header {
@@ -309,26 +309,23 @@ ul.errorlist li {
 }
 .thumbnail-container:hover .toggle-visible,
 .thumbnail-container:hover .toggle-favorite {
-	opacity:.8;
+	opacity:1;
 }
 .thumbnail-container .toggle-visible:hover,
 .thumbnail-container .toggle-favorite:hover {
-	opacity:1;
+	box-shadow: inset 3px 3px 5px rgba(255, 255, 255, .9), inset -3px -3px 5px rgba(100, 100, 100, .2);
 }
 .unfavorite-icon,
 .favorite-icon {
 	width: 25px;
-	height: 30px;
+	height: 25px;
 	display:inline-block;
 	position: relative;
-	background: url(/static/img/emptystar.png) no-repeat;
-	background-size:23px 23px;
-	background-position:2px 3px;
+	background-image: url(/static/img/heart.png);
+	background-size:25px 25px;
 }
 .unfavorite-icon {
-	background: url(/static/img/greenstar.png) no-repeat;
-	background-size:35px 35px;
-	background-position:-4px 1px;
+	background-image: url(/static/img/heart_filled.png);
 }
 .visible-icon,
 .invisible-icon {
@@ -639,9 +636,11 @@ background-color:rgba(0,0,0,0)}
 	box-shadow:none;
 	color:inherit;
 	font-size:inherit;
+	font-family:"Roboto";
 }
 .media-object > div {
 	cursor:default;
+	font-family:"Roboto";
 }
 .remove-media-object {
 	position:absolute;
@@ -885,16 +884,16 @@ background-color:rgba(0,0,0,0)}
 	right:0;
 	top:0;
 	bottom:0;
-	background-color:rgba(240,240,240,.6);
+	background-color:rgba(250,250,250,.65);
 	text-align:center;
 	cursor:default;
 	font-weight:300;
 	line-height:28px;
 	padding-top:40px;
-	color:#666;
+	color:#444;
 }
 .media-overlay:hover {
-	color:#666;
+	color:#444;
 }
 .thumbnail-frame:hover .media-overlay.display-on-hover {
 	display:block;
@@ -1023,4 +1022,7 @@ background-color:rgba(0,0,0,0)}
 	white-space:nowrap;
 	overflow:hidden;
 	text-overflow:ellipsis;
+}
+.story-thumbnail-title a {
+	font-weight:300;
 }
